skipci: Automatic version increment by Bamboo

--- a/conandata.yml
+++ b/conandata.yml
@@ -14,3 +14,5 @@ requirements:
 commit_hash:
   "0.90.5":
     hash: "8349aca40ecd6df1e8b66c508e8f6e78f3769fb6"
+  "0.90.6":
+    hash: "58a57f19ee4e194de266429c00c45f677e2c0d0a"
