Pull request #7: Build tests in release configuration
Merge in ADGUARD-CORE-LIBS/vpn-libs from fix/build_tests_in_release to master

Squashed commit of the following:

commit 19071a258d080370d4c6e4402bc260034d0eeab0
Author: Nikita Gorskikh <n.gorskikh@adguard.com>
Date:   Wed Aug 3 18:23:40 2022 +0300

    Build tests in release configuration

--- a/bamboo-specs/run-integration-test.yaml
+++ b/bamboo-specs/run-integration-test.yaml
@@ -40,31 +40,31 @@ Run integration test:
         interpreter: SHELL
         scripts:
           - |-
-            set -x
-            
+            set -x -e
+
             cd ./examples/my_vpn
-            
+
             OPENSSL_CONF_FILE="openssl.conf"
             KEY_FILE_NAME="key.pem"
             CERT_FILE_NAME="cert.pem"
-            
+
             if [ ! -f "$KEY_FILE_NAME" ] || [ ! -f "$CERT_FILE_NAME" ]; then
               openssl req -config "$OPENSSL_CONF_FILE" -new -x509 -sha256 -newkey rsa:2048 -nodes -days 1000 \
               -keyout "$KEY_FILE_NAME" -out "$CERT_FILE_NAME" -subj "/C=de/CN=www.example.com"
             fi
-            
-            cargo build
+
+            cargo build --release
         description: Build vpn-libs-endpoint
         working-dir: vpn-libs-endpoint
     - script:
         interpreter: SHELL
         scripts:
           - |-
-            set -x
-            
+            set -x -e
+
             mkdir -p build && cd build
 
-            cmake -DCMAKE_BUILD_TYPE=Debug \
+            cmake -DCMAKE_BUILD_TYPE=RelWithDebInfo \
             -DCMAKE_C_COMPILER=clang \
             -DCMAKE_CXX_COMPILER=clang++ \
             -DCMAKE_C_FLAGS='-fsanitize=address' \
