skipci: Automatic version increment by Bamboo

--- a/conandata.yml
+++ b/conandata.yml
@@ -22,3 +22,5 @@ commit_hash:
     hash: "d03c0274c7c1766af6214a56621735f183346ea5"
   "0.90.9":
     hash: "0e9a9a3ca3eaaf3cfe44c6cac1ceb30a5907778a"
+  "0.90.10":
+    hash: "a0c19ef75af0128191b88759ee33a42493b3d1f6"
