Pull request #9: QUIC utils for SNI extraction
Merge in ADGUARD-CORE-LIBS/vpn-libs from feature/AG-15098 to master

Squashed commit of the following:

commit 8235f8ef1c3fe7ca538a5df86e48dbeeb44639e2
Merge: 7179844 a266ae3
Author: Artem Burcha <a.burcha@adguard.com>
Date:   Wed Aug 17 12:54:02 2022 +0300

    Merge branch 'master' of ssh://bit.adguard.com:7999/adguard-core-libs/vpn-libs into feature/AG-15098

commit 7179844b44e71a6e301c24de7b0c6744efcaf349
Author: Artem Burcha <a.burcha@adguard.com>
Date:   Wed Aug 17 12:24:23 2022 +0300

    Edit changelog message

commit d2dbc98f7f5f9a7292ce923748675545ebbc69ad
Merge: 4b7518d 5a83689
Author: Artem Burcha <a.burcha@adguard.com>
Date:   Wed Aug 17 10:27:59 2022 +0300

    Merge branch 'master' of ssh://bit.adguard.com:7999/adguard-core-libs/vpn-libs into feature/AG-15098

commit 4b7518d3ec348e2038f50d92abf38bc53649db7a
Author: Artem Burcha <a.burcha@adguard.com>
Date:   Wed Aug 17 10:21:46 2022 +0300

    Formating changes

commit 781b63a90fd0f88e767455b5865833a8a6c1f0f0
Author: Artem Burcha <a.burcha@adguard.com>
Date:   Wed Aug 17 10:10:26 2022 +0300

    Code formatter on quic related files, Added changes to changelog

commit 5cecdbb1a282f8265ac1978c403b6eca7f1d5ca3
Author: Artem Burcha <a.burcha@adguard.com>
Date:   Tue Aug 16 21:17:55 2022 +0300

    Check if tests are failing because of poor placement of decode_from_hex

commit 5c191d247456dda46b58c77b86a5616f370bb628
Author: Artem Burcha <a.burcha@adguard.com>
Date:   Tue Aug 16 20:29:07 2022 +0300

    Fixed quic and udp initial packets processing logic

commit 0f5ca43492d234b25e28ac0930f98dbc1480d49f
Author: Artem Burcha <a.burcha@adguard.com>
Date:   Tue Aug 16 16:13:00 2022 +0300

    Added quic test to domain lookuper, excluded quic_enabled flag, added bound_if check

commit f2fad5fa4a13104537dcbca5325de8a32b76059e
Author: Sergei Gunchenko <s.gunchenko@adguard.com>
Date:   Tue Aug 16 12:18:11 2022 +0300

    core/src/domain_lookuper.cpp edited online with

--- a/core/test/standalone_client/standalone_client.conf
+++ b/core/test/standalone_client/standalone_client.conf
@@ -24,7 +24,8 @@
             "192.168.0.0/16",
             "224.0.0.0/3"
         ],
-        "mtu_size": 1500
+        "mtu_size": 1500,
+        "bound_if": "en0"
     },
     "loglevel": "info"
 }
