skipci: Automatic version increment by Bamboo

--- a/conandata.yml
+++ b/conandata.yml
@@ -32,3 +32,5 @@ commit_hash:
     hash: "bb1ab5c1e22d758bb291f419e145e4ebf2f29ca9"
   "0.90.14":
     hash: "128c9ce23a493b9bc94da1237e90a7f556eb832d"
+  "0.90.15":
+    hash: "9a586256db600261250a9baf686fb3df5c832c18"
