Pull request #16: Feature/AG-13859 - add more configurable options to standalone
Merge in ADGUARD-CORE-LIBS/vpn-libs from feature/AG-13859 to master

Squashed commit of the following:

commit b528cf53c086d4951ded2f1786dbf76b25914d6a
Author: Max Grupper <m.grupper@adguard.com>
Date:   Fri Sep 2 11:45:03 2022 +0300

    Update standalone_client.cpp

commit 7cbc078f2a08811be632ef24ad5ad77f34a4e8ed
Merge: aa816f7 5983adb
Author: Max Grupper <m.grupper@adguard.com>
Date:   Fri Sep 2 11:40:54 2022 +0300

    Merge branch 'master' into feature/AG-13859

    # Conflicts:
    #	core/test/standalone_client/standalone_client.cpp

commit aa816f7b0d25cf6557ec22afbb091fa0b3e52091
Author: Max Grupper <m.grupper@adguard.com>
Date:   Tue Aug 30 21:36:07 2022 +0300

    apply clang-format

commit 51f0753bf87958e9805e325aea87378c6f9c5ffb
Author: Max Grupper <m.grupper@adguard.com>
Date:   Tue Aug 30 15:29:20 2022 +0300

    add vpn mode

commit 9c14610e923d35a81e7b399cd0c2c86ef2d1c04a
Author: Max Grupper <m.grupper@adguard.com>
Date:   Tue Aug 30 15:07:59 2022 +0300

    blank lines

commit 618ee813d1ce87b84fac17e22be32daec223b61d
Author: Max Grupper <m.grupper@adguard.com>
Date:   Tue Aug 30 12:20:27 2022 +0300

    fix

commit 627d08bb2f4c2880e320b0a874c857e5b6a13c2f
Author: Max Grupper <m.grupper@adguard.com>
Date:   Tue Aug 30 11:57:34 2022 +0300

    update readme

commit 18b0f2e4fb29608bdf43b58e43584b2074a7a715
Author: Max Grupper <m.grupper@adguard.com>
Date:   Tue Aug 30 11:02:09 2022 +0300

    add upstream to config

commit 360857ca9ea67407690435a494c727230f2b9721
Author: Max Grupper <m.grupper@adguard.com>
Date:   Mon Aug 29 10:40:33 2022 +0300

    add exclusion and killswitch

--- a/core/test/standalone_client/standalone_client.conf
+++ b/core/test/standalone_client/standalone_client.conf
@@ -4,9 +4,13 @@
         "address": "127.0.0.1:4433",
         "username": "premium",
         "password": "premium",
-        "skip_cert_verify": false
+        "skip_cert_verify": false,
+        "upstream_protocol": "http2",
+        "upstream_fallback_protocol": "http2"
     },
     "listener_type": "socks",
+    "dns_upstream": "8.8.8.8:53",
+    "killswitch_enabled": true,
     "socks_info": {
         "socks_user": "",
         "socks_pass": "",
@@ -27,5 +31,9 @@
         "mtu_size": 1500,
         "bound_if": "en0"
     },
-    "loglevel": "info"
+    "loglevel": "info",
+    "vpn_mode": "general",
+    "exclusions": [
+        "example.com"
+    ]
 }
