skipci: Automatic version increment by Bamboo

--- a/conandata.yml
+++ b/conandata.yml
@@ -60,3 +60,5 @@ commit_hash:
     hash: "94a511b156e813a2f19fd06b1c2e6ccf75c2143b"
   "0.90.28":
     hash: "1d4758276d6708d56131df114b92fa0ac636aa79"
+  "0.90.29":
+    hash: "f9d3afcc5c28e4fb887b3f692d5cc74e762fdf94"
