Pull request 26: Fix race in locations pinger runner
Merge in ADGUARD-CORE-LIBS/vpn-libs from fix/race to master

Squashed commit of the following:

commit 6884323817fd95b4237e6061d0cc957442828457
Author: Sergei Gunchenko <s.gunchenko@adguard.com>
Date:   Thu Sep 15 13:01:47 2022 +0300

    Expand gitignore scope

commit 3a66cd47ce5a8441be96d429a474d1bd0318beda
Author: Sergei Gunchenko <s.gunchenko@adguard.com>
Date:   Fri Sep 16 15:16:35 2022 +0300

    net: fix race

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
-cmake-build-release/
-cmake-build-debug/
+cmake-build-*/
 .vscode/
 .idea/
 build/
@@ -12,3 +11,12 @@ build/
 
 # Rust
 Cargo.lock
+
+# Conan
+# fixme: Remove when the repo will be adapted to out-of-tree build model.
+#        As for now, the vpn-libs build is adapted to in-tree building model, so Conan
+#        stores these files in the project root directory instead of the build folder.
+conan.lock
+conanbuildinfo.*
+conaninfo.txt
+graph_info.json
