Pull request #23: Create TUN/TAP device for Windows with Wintun
Merge in ADGUARD-CORE-LIBS/vpn-libs from feature/AG-14039-v2 to master

Squashed commit of the following:

commit fc7526d133659dec72e013eb6d5e30486f6c9269
Author: Sergey Fionov <sfionov@adguard.com>
Date:   Fri Sep 30 15:11:55 2022 +0300

    Add wintun VERSION

commit a4ccaf086b585b7e0c2792ba7018974c9de68cc8
Author: Sergey Fionov <sfionov@adguard.com>
Date:   Fri Sep 30 15:06:08 2022 +0300

    Changelog

commit c2788d1e429c5b6e5276514aef4ce751ea4a2c83
Author: Sergey Fionov <sfionov@adguard.com>
Date:   Fri Sep 30 14:49:02 2022 +0300

    Fix

commit 7fa863151ecc0ed65421d0d14e8d3bd21ca4f95b
Merge: 72f0006 947817f
Author: Sergey Fionov <sfionov@adguard.com>
Date:   Fri Sep 30 14:21:45 2022 +0300

    Merge branch 'feature/AG-14039-v2' of ssh://bit.adguard.com:7999/adguard-core-libs/vpn-libs into feature/AG-14039-v2

commit 72f0006d06df2d51b716b9c4f2f8982b4ba599e5
Author: Sergey Fionov <sfionov@adguard.com>
Date:   Fri Sep 30 14:20:58 2022 +0300

    Fix build

commit 947817f14ac1fe7a2edcdd86e3b154ebbe4d0daf
Author: Artem Burcha <a.burcha@adguard.com>
Date:   Fri Sep 30 14:09:53 2022 +0300

    delete superfluous struct

commit a636749635abc3fd27f21c0163876f2b65f25018
Author: Sergey Fionov <sfionov@adguard.com>
Date:   Fri Sep 30 14:05:55 2022 +0300

    Review fix

commit 9f02591bf06483cf19b67f97bfe7db7e7fe85aac
Author: Sergey Fionov <sfionov@adguard.com>
Date:   Fri Sep 30 14:04:11 2022 +0300

    Oops

commit fc4720bd98fd7f73ef4f931090a592d57aa32ebe
Author: Sergey Fionov <sfionov@adguard.com>
Date:   Fri Sep 30 13:59:35 2022 +0300

    sa -> peer

commit 3d4b0d06463f5d463a0ae2f011ff616e049f72e2
Author: Sergey Fionov <sfionov@adguard.com>
Date:   Fri Sep 30 13:54:29 2022 +0300

    Review fix

commit 85997eac5433639afa794b81ffbcf88a637ae82b
Author: Sergey Fionov <sfionov@adguard.com>
Date:   Fri Sep 30 12:10:04 2022 +0300

    Fix build

commit 679197b7850f9832d081b9932e154732791d295a
Author: Sergey Fi

--- a/net/CMakeLists.txt
+++ b/net/CMakeLists.txt
@@ -34,8 +34,15 @@ set(SOURCE_FILES
         ${NET_SOURCE_DIR}/locations_pinger_runner.cpp
         ${NET_SOURCE_DIR}/dns_utils.cpp
         ${NET_SOURCE_DIR}/quic_utils.cpp
+        ${NET_SOURCE_DIR}/os_tunnel.cpp
     )
-
+if (APPLE)
+    list(APPEND SOURCE_FILES ${NET_SOURCE_DIR}/os_tunnel_mac.cpp)
+elseif(WIN32)
+    list(APPEND SOURCE_FILES ${NET_SOURCE_DIR}/os_tunnel_win.cpp)
+else()
+    list(APPEND SOURCE_FILES ${NET_SOURCE_DIR}/os_tunnel_linux.cpp)
+endif()
 
 if(NOT TARGET vpnlibs_common)
     add_subdirectory(${VPN_LIB_DIR}/common ${CMAKE_BINARY_DIR}/common)
@@ -65,6 +72,11 @@ endif ()
 if (MSVC)
     target_link_libraries(vpnlibs_net "Iphlpapi.lib")
 endif ()
+
+if (WIN32)
+    target_link_libraries (vpnlibs_net wsock32 ws2_32 ntdll iphlpapi)
+    target_include_directories(vpnlibs_net PUBLIC ${THIRD_PARTY_DIR}/wintun/include)
+endif()
 
 enable_testing()
 
