skipci: Automatic version increment by Bamboo

--- a/conandata.yml
+++ b/conandata.yml
@@ -90,3 +90,5 @@ commit_hash:
     hash: "63cffb92ac4d6021fd6c1ca5853866da03eaae8d"
   "0.91.12":
     hash: "ae207feab9b93e004e65e132d1f06f9b09e9132c"
+  "0.91.13":
+    hash: "b6492e648f3df68c67445c483caf74862262de53"
