Pull request 38: Fix ios build
Merge in ADGUARD-CORE-LIBS/vpn-libs from fix/ios to master

Squashed commit of the following:

commit 00fbb280fb9c2dfdce86abd4a5af554652c27b13
Author: Sergei Gunchenko <s.gunchenko@adguard.com>
Date:   Thu Oct 13 15:15:49 2022 +0300

    fix

commit bbab89713e6fc82ddf39f258348f001370804181
Author: Sergei Gunchenko <s.gunchenko@adguard.com>
Date:   Thu Oct 13 13:31:05 2022 +0300

    fix

commit 1c9fe461eb642e9aa81958b5e931bd38a8a2913a
Author: Sergei Gunchenko <s.gunchenko@adguard.com>
Date:   Thu Oct 13 13:22:23 2022 +0300

    fix spec

commit 48ca8306918f58cd3ab6211942a36de6c4b18c28
Author: Sergei Gunchenko <s.gunchenko@adguard.com>
Date:   Thu Oct 13 13:06:25 2022 +0300

    fix

commit 66c17b614395c82682545d71a2c2451abc0c39ff
Author: Sergei Gunchenko <s.gunchenko@adguard.com>
Date:   Thu Oct 13 12:20:43 2022 +0300

    fix

commit 40285dbd0e3984ce0ab6060440a67bb66141e50d
Author: Sergei Gunchenko <s.gunchenko@adguard.com>
Date:   Wed Oct 12 21:15:37 2022 +0300

    fix

commit 0e7edd53ab1a69ea478d0003f0eca408ae6827e2
Author: Sergei Gunchenko <s.gunchenko@adguard.com>
Date:   Wed Oct 12 20:50:36 2022 +0300

    fix

commit 1c8b4fb4506e61a935e87426256b77520b53515d
Author: Sergei Gunchenko <s.gunchenko@adguard.com>
Date:   Wed Oct 12 19:14:41 2022 +0300

    fix

commit 318a613438d6b3913a4df6f4ff4803273d28d89e
Author: Sergei Gunchenko <s.gunchenko@adguard.com>
Date:   Wed Oct 12 18:59:39 2022 +0300

    fix

commit c88692245ff0aa35ba60186936ca45f8d29353d1
Author: Sergei Gunchenko <s.gunchenko@adguard.com>
Date:   Wed Oct 12 18:51:30 2022 +0300

    net: fix ios build

--- a/bamboo-specs/run-integration-test.yaml
+++ b/bamboo-specs/run-integration-test.yaml
@@ -95,7 +95,7 @@ Run integration test:
                 then
                     echo "...Passed"
                 else
-                    has_error=has_error+1
+                    has_error=`expr $has_error + 1`
                     echo "...Failed"
                 fi
             }
