skipci: Automatic version increment by Bamboo

--- a/conandata.yml
+++ b/conandata.yml
@@ -96,3 +96,5 @@ commit_hash:
     hash: "2222e1ae41e4d6c5f665e450d7c2fa4e08c3d919"
   "0.91.15":
     hash: "1fc0a974e9319fe32613dce975d9a0825d9bd018"
+  "0.91.16":
+    hash: "508dcb9374172c47e3424a3ab58f0c08e38fd1b3"
