skipci: Automatic version increment by Bamboo

--- a/conandata.yml
+++ b/conandata.yml
@@ -98,3 +98,5 @@ commit_hash:
     hash: "1fc0a974e9319fe32613dce975d9a0825d9bd018"
   "0.91.16":
     hash: "508dcb9374172c47e3424a3ab58f0c08e38fd1b3"
+  "0.91.17":
+    hash: "b3c7a6ce1170f325a65e334735468dbb5e5b4a13"
