Pull request #43: fix integration test
Merge in ADGUARD-CORE-LIBS/vpn-libs from fix_integration_test to master

Squashed commit of the following:

commit ec36e476ebee969acd7df019e2cf9a4397ed1bfb
Author: Max Grupper <m.grupper@adguard.com>
Date:   Fri Oct 14 13:45:58 2022 +0300

    Update standalone_client.conf

commit a828382a75208c00d447937febfeb3b71fc36676
Author: Max Grupper <m.grupper@adguard.com>
Date:   Fri Oct 14 12:57:28 2022 +0300

    change default address to ipv6

commit aaa21b37b41b472cd6bbeb40996b3e2ce9be4209
Author: Max Grupper <m.grupper@adguard.com>
Date:   Thu Oct 13 18:20:27 2022 +0300

    add #!/bin/bash

commit b0f24134cc371bf759cc584f2f1c363221b36650
Author: Max Grupper <m.grupper@adguard.com>
Date:   Thu Oct 13 17:37:55 2022 +0300

    one more fix

commit df68c8ed3f78056df44db878b7b7e63d30c03945
Author: Max Grupper <m.grupper@adguard.com>
Date:   Thu Oct 13 17:29:55 2022 +0300

    fix integration test

--- a/bamboo-specs/run-integration-test.yaml
+++ b/bamboo-specs/run-integration-test.yaml
@@ -40,6 +40,8 @@ Run integration test:
         interpreter: SHELL
         scripts:
           - |-
+            #!/bin/bash
+            
             set -x -e
 
             cd ./examples/my_vpn
@@ -60,6 +62,8 @@ Run integration test:
         interpreter: SHELL
         scripts:
           - |-
+            #!/bin/bash
+            
             set -x -e
 
             mkdir -p build && cd build
@@ -81,7 +85,9 @@ Run integration test:
         description: Run integration test
         scripts:
           - |-
-            set -x
+            #!/bin/bash
+            
+            set -x -e
 
             export SRC_ROOT=${PWD}
 
@@ -101,7 +107,7 @@ Run integration test:
             }
 
             cd vpn-libs-endpoint/examples/my_vpn
-            ../../target/debug/vpn_endpoint vpn.conf > /dev/null 2>&1 &
+            ../../target/release/vpn_endpoint vpn.conf > /dev/null 2>&1 &
             echo "Start endpoint"
             sleep 3
 
@@ -161,6 +167,8 @@ Run integration test:
         interpreter: SHELL
         scripts:
           - |-
+            #!/bin/bash
+            
             conan user -p "${bamboo_artifactoryPassword}" -r art "${bamboo_artifactoryUser}" > upload.txt 2>&1
             conan upload -r art --all -c '*' > upload.txt 2>&1
             echo conan upload finished with status $?
