--- a/core/test/standalone_client/standalone_client.conf
+++ b/core/test/standalone_client/standalone_client.conf
@@ -1,7 +1,7 @@
 {
     "server_info": {
         "hostname": "localhost",
-        "address": "127.0.0.1:4433",
+        "address": "[::1]:4433",
         "username": "premium",
         "password": "premium",
         "skip_cert_verify": false,
