skipci: Automatic version increment by Bamboo

--- a/conandata.yml
+++ b/conandata.yml
@@ -102,3 +102,5 @@ commit_hash:
     hash: "b3c7a6ce1170f325a65e334735468dbb5e5b4a13"
   "0.91.18":
     hash: "39be95680c088a8b27b0b9dc598fd96b0750e96d"
+  "0.91.19":
+    hash: "6a47090f8c402a43ae4bcfead39b0b74e79da2ed"
