skipci: Automatic version increment by Bamboo

--- a/conandata.yml
+++ b/conandata.yml
@@ -110,3 +110,5 @@ commit_hash:
     hash: "950f40c05bf206de2489716d3ac3e98ad9868d60"
   "0.91.22":
     hash: "451ab219539cbde3fc21ac60d060d4e905e702ba"
+  "0.91.23":
+    hash: "9f4061aed5c9a49170a35fdf712b7802e876c104"
