--- a/net/CMakeLists.txt
+++ b/net/CMakeLists.txt
@@ -41,7 +41,8 @@ string(TOLOWER "${CMAKE_OSX_SYSROOT}" OSX_SYSROOT_LC)
 if(APPLE AND OSX_SYSROOT_LC MATCHES "/macosx([0-9]+\.)+sdk$")
     list(APPEND SOURCE_FILES ${NET_SOURCE_DIR}/os_tunnel_mac.cpp)
 elseif(WIN32)
-    list(APPEND SOURCE_FILES ${NET_SOURCE_DIR}/os_tunnel_win.cpp)
+    # Disabled until WinTunnel will be compatible with Windows 7
+    # list(APPEND SOURCE_FILES ${NET_SOURCE_DIR}/os_tunnel_win.cpp)
 elseif(CMAKE_SYSTEM_NAME STREQUAL Linux)
     list(APPEND SOURCE_FILES ${NET_SOURCE_DIR}/os_tunnel_linux.cpp)
 endif()
