skipci: Automatic version increment by Bamboo

--- a/conandata.yml
+++ b/conandata.yml
@@ -122,3 +122,5 @@ commit_hash:
     hash: "2834bd6aabf869df9804fae6edad261361b40f35"
   "0.91.28":
     hash: "4897156bf46403fda6b756b01f19e7a30b35ecd5"
+  "0.91.29":
+    hash: "d940db9cf54312675fbf9a7e1f8a54576d784456"
