Pull request #55: Fix compability of functions in os_tunnel_win
Merge in ADGUARD-CORE-LIBS/vpn-libs from fix/tunnel_win_functions to master

Squashed commit of the following:

commit ad639f9f61c3bdefae9049567b6dbbfc302d7e38
Author: Artem Burcha <a.burcha@adguard.com>
Date:   Thu Oct 27 19:22:39 2022 +0300

    Edits from PR suggestions

commit 2405de6f6d93b3ec49b278f095a76d3aadda6eae
Author: Artem Burcha <a.burcha@adguard.com>
Date:   Thu Oct 27 15:26:20 2022 +0300

    Fix typedef naming

commit 4200229674c219eb00b122879b6686574412c88c
Author: Artem Burcha <a.burcha@adguard.com>
Date:   Thu Oct 27 13:56:22 2022 +0300

    Fix misprint

commit 02536361b718a1ef20ce35758c366dcab4d678da
Author: Artem Burcha <a.burcha@adguard.com>
Date:   Thu Oct 27 13:44:32 2022 +0300

    Edit setup_dns and vpn_win_detect_active_if to handle ipv6

commit 0f059dd1ea65cac0c1a3b21ee16e1c88d67ff0ca
Author: Artem Burcha <a.burcha@adguard.com>
Date:   Tue Oct 25 15:42:08 2022 +0300

    Mark vpn_create_tun_listener WIN_EXPORT

commit 46f44cc2dc571e4ae2a1f9b98704729b8befc163
Author: Artem Burcha <a.burcha@adguard.com>
Date:   Tue Oct 25 12:11:28 2022 +0300

    Small edit for vpn_win_detect_active_if

commit 0c72130e5b45803f496cef6c6a92fbc08d017de3
Author: Sergei Gunchenko <s.gunchenko@adguard.com>
Date:   Mon Oct 24 19:53:24 2022 +0300

    net/src/os_tunnel_win.cpp edited online with Bitbucket

commit a9b780b4215752d3d879c87c966f036135ae5ee1
Author: Artem Burcha <a.burcha@adguard.com>
Date:   Mon Oct 24 18:55:28 2022 +0300

    Take metric into account when choosing active interface

commit 76b7dde32b2b7987032af4128b06d74d9ebb5110
Author: Artem Burcha <a.burcha@adguard.com>
Date:   Mon Oct 24 15:23:09 2022 +0300

    Small fix for setsockopt, misc.

commit 014b7997216715d55eed0140b05541f6194caf7c
Author: Artem Burcha <a.burcha@adguard.com>
Date:   Mon Oct 24 14:45:04 2022 +0300

    Revert fix/win_tunnel_disable

commit 9eebfde70bafc3c4f59be80ff5fb588ee590cbac
Author: Artem Burcha <a.burch

--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -25,6 +25,10 @@ set(SOURCE_FILES
         ${COMMON_SRC_DIR}/platform.cpp
 )
 
+if (WIN32)
+    list(APPEND SOURCE_FILES ${COMMON_SRC_DIR}/guid_utils.cpp)
+endif()
+
 add_library(vpnlibs_common STATIC EXCLUDE_FROM_ALL ${SOURCE_FILES})
 set_property(TARGET vpnlibs_common PROPERTY POSITION_INDEPENDENT_CODE ON)
 if (NOT MSVC)
