skipci: Automatic version increment by Bamboo

--- a/conandata.yml
+++ b/conandata.yml
@@ -132,3 +132,5 @@ commit_hash:
     hash: "8dffd3f47afed8b2740fca6ce0846181518fc386"
   "0.91.33":
     hash: "e274fbb3e2881b70453403bdc0885db9f90f4127"
+  "0.91.34":
+    hash: "38e6732083f0b4dbe11e58837275ddf40bc43deb"
