skipci: Automatic version increment by Bamboo

--- a/conandata.yml
+++ b/conandata.yml
@@ -140,3 +140,5 @@ commit_hash:
     hash: "e396c8ec760679a83c1b1f7a9d86d9e769863b50"
   "0.91.37":
     hash: "0908b4bc94bed1d95e1f3442d0200d611add50a7"
+  "0.91.38":
+    hash: "e2a68884645c9d72a772a9d241fe02c2396edaaa"
