skipci: Automatic version increment by Bamboo

--- a/conandata.yml
+++ b/conandata.yml
@@ -158,3 +158,5 @@ commit_hash:
     hash: "8040cdf4176c667c6885a25dac77a7f4394f8721"
   "0.91.46":
     hash: "912e2411c966e043d0dc3620a006fa07cf275b16"
+  "0.91.47":
+    hash: "df13435a058df7defe7c074b971c8b0cf699a905"
