skipci: Automatic version increment by Bamboo

--- a/conandata.yml
+++ b/conandata.yml
@@ -210,3 +210,5 @@ commit_hash:
     hash: "392a501ec79ee309c2bb13fa0f17d5de92edd4a0"
   "0.91.72":
     hash: "fc22761f4084fc73cd3abf527178c2683a3396c1"
+  "0.91.73":
+    hash: "302f8287376024260a542416698585d925d1b0ca"
