Pull request #96: Fix exclusions update breaking dns upstream health check
Merge in ADGUARD-CORE-LIBS/vpn-libs from fix/AG-18322 to master

Squashed commit of the following:

commit 4ac2d9169ec56b53d62c0bae63519146f7912680
Author: Sergei Gunchenko <s.gunchenko@adguard.com>
Date:   Wed Dec 21 17:15:59 2022 +0300

commit cec933ca753edf880fcf1fe6f1e44bb92852d63d
Author: Sergei Gunchenko <s.gunchenko@adguard.com>
Date:   Wed Dec 21 16:57:35 2022 +0300

    try another upstream

commit 68b1a617909fe38c0066fc24abac0b3e8c242261
Author: Sergei Gunchenko <s.gunchenko@adguard.com>
Date:   Wed Dec 21 16:29:20 2022 +0300

    tmp

commit 5691c5bf1c507a53a3ceabbbea44fcf9828da7a8
Author: Sergei Gunchenko <s.gunchenko@adguard.com>
Date:   Wed Dec 21 16:10:23 2022 +0300

    Revert "check if asan on linux does not generate false-positive errors"

    This reverts commit 2329078af9bf3a2a5b77d92373d01c0adddde02d.

commit b9c8f523f7f1111e01f3a914816664f1f816e963
Author: Sergei Gunchenko <s.gunchenko@adguard.com>
Date:   Wed Dec 21 16:10:16 2022 +0300

    Revert "reuse vpn-libs build for integration tests"

    This reverts commit 13ae7e0c5dc65b2042c2247632af0b634a3a8f47.

commit f84a07d9c0d47565528201a0a58665c18d83af6d
Author: Sergei Gunchenko <s.gunchenko@adguard.com>
Date:   Wed Dec 21 16:10:11 2022 +0300

    Revert "fix"

    This reverts commit e68021c61a373ccaa958cee321604ccfdcc3f9a5.

commit f34c022cb543679974df7f103a990865768cc65d
Author: Sergei Gunchenko <s.gunchenko@adguard.com>
Date:   Wed Dec 21 16:08:34 2022 +0300

    Revert "test"

    This reverts commit 995822a16f7c356fab065be29e0dd03466315a68.

commit 995822a16f7c356fab065be29e0dd03466315a68
Author: Sergei Gunchenko <s.gunchenko@adguard.com>
Date:   Wed Dec 21 15:54:49 2022 +0300

    test

commit e68021c61a373ccaa958cee321604ccfdcc3f9a5
Author: Sergei Gunchenko <s.gunchenko@adguard.com>
Date:   Wed Dec 21 15:33:20 2022 +0300

    fix

commit 13ae7e0c5dc65b2042c2247632af0b634a3a8f47
Author: Sergei Gunchenko <s.gunch

--- a/bamboo-specs/run-integration-test.yaml
+++ b/bamboo-specs/run-integration-test.yaml
@@ -162,6 +162,46 @@ Run integration test:
                 kill -15 $(jobs -p) >/dev/null 2>&1
                 exit 0
             fi
+
+    - script:
+        interpreter: SHELL
+        scripts:
+          - |-
+            #!/bin/bash
+
+            set -x -e
+
+            mkdir -p build_no_asan && cd build_no_asan
+
+            # Using DNS proxy in VPN libs leads to false-positive address sanitizer errors
+            cmake -DCMAKE_BUILD_TYPE=RelWithDebInfo \
+            -DCMAKE_C_COMPILER=clang \
+            -DCMAKE_CXX_COMPILER=clang++ \
+            -DCMAKE_CXX_FLAGS='-stdlib=libc++ -DI_DO_WANT_TO_RUN_LIVE_TESTS' \
+            ..
+
+            make -j 4 test_vpn_client_live
+        description: Build vpn-libs without address sanitizer
+        working-dir: vpn-libs
+
+    - script:
+        interpreter: SHELL
+        description: Run live test
+        scripts:
+          - |-
+            #!/bin/bash
+
+            set -x -e
+
+            export SRC_ROOT=${PWD}
+
+            cd vpn-libs-endpoint/examples/my_vpn
+            ../../target/release/vpn_endpoint vpn.conf > /dev/null 2>&1 &
+            echo "Start endpoint"
+            sleep 3
+
+            $SRC_ROOT/vpn-libs/build_no_asan/core/test_vpn_client_live
+
   final-tasks:
     - script:
         interpreter: SHELL
