skipci: Automatic version increment by Bamboo

--- a/conandata.yml
+++ b/conandata.yml
@@ -226,3 +226,5 @@ commit_hash:
     hash: "37ecbe7d08bcf81c5b1415a5f83351812d76df47"
   "0.91.80":
     hash: "44a9c12edb6f8c3ca73e47335876fe241923c407"
+  "0.91.81":
+    hash: "ccf9362860d11a7c6d10d1e938362e1146733ea4"
