Pull request #107: Upgrade deps
Merge in ADGUARD-CORE-LIBS/vpn-libs from feature/upgrade_deps to master

Squashed commit of the following:

commit 5f6e6f0d962d6345b757b6df397a09e8b794d585
Author: Sergei Gunchenko <s.gunchenko@adguard.com>
Date:   Thu Jan 26 11:41:28 2023 +0300

    rkn fix

commit fad71798969cbd98c55e80574518319f0c4976a6
Author: Sergei Gunchenko <s.gunchenko@adguard.com>
Date:   Fri Jan 27 12:23:18 2023 +0300

    upgrade deps

--- a/bamboo-specs/run-integration-test.yaml
+++ b/bamboo-specs/run-integration-test.yaml
@@ -127,13 +127,13 @@ Run integration test:
             check_error
             sleep 1
 
-            echo "HTTP request -> adguard.com, ipv4..."
-            curl -x socks5://127.0.0.1:7777 -4 http://adguard.com >/dev/null
+            echo "HTTP request -> example.com, ipv4..."
+            curl -x socks5://127.0.0.1:7777 -4 http://example.com >/dev/null
             check_error
             sleep 1
 
-            echo "HTTPs request -> adguard.com, ipv4..."
-            curl -x socks5://127.0.0.1:7777 -4 https://adguard.com >/dev/null
+            echo "HTTPs request -> example.com, ipv4..."
+            curl -x socks5://127.0.0.1:7777 -4 https://example.com >/dev/null
             check_error
             sleep 1
 
