skipci: Automatic version increment by Bamboo

--- a/conandata.yml
+++ b/conandata.yml
@@ -254,3 +254,5 @@ commit_hash:
     hash: "6be6e916607f7f855f2bcb85c8a24dac48c9964f"
   "0.92.3":
     hash: "e16cce06369d4aa733a5519567f7883b3dc7a2d9"
+  "0.92.4":
+    hash: "0122f0b4735a47134b184b0b18963c115dd9103e"
