--- a/conandata.yml
+++ b/conandata.yml
@@ -256,3 +256,5 @@ commit_hash:
     hash: "e16cce06369d4aa733a5519567f7883b3dc7a2d9"
   "0.92.4":
     hash: "0122f0b4735a47134b184b0b18963c115dd9103e"
+  "0.92.5":
+    hash: "a7b17819aedbe929b1ecd2d88b522a76dddce613"
