Pull request #118: Fix integration tests
Merge in ADGUARD-CORE-LIBS/vpn-libs from fix/tests to master

Squashed commit of the following:

commit 1d6bfb372e04c47f6f9b601a47ff509173c415e6
Author: Sergei Gunchenko <s.gunchenko@adguard.com>
Date:   Mon Mar 6 17:03:01 2023 +0300

    fix integration tests

--- a/bamboo-specs/run-integration-test.yaml
+++ b/bamboo-specs/run-integration-test.yaml
@@ -107,7 +107,7 @@ Run integration test:
             }
 
             cd vpn-libs-endpoint/examples/my_vpn
-            ../../target/release/vpn_endpoint vpn.conf > /dev/null 2>&1 &
+            ../../target/release/vpn_endpoint vpn.conf tls_hosts.conf > /dev/null 2>&1 &
             echo "Start endpoint"
             sleep 3
 
@@ -196,7 +196,7 @@ Run integration test:
             export SRC_ROOT=${PWD}
 
             cd vpn-libs-endpoint/examples/my_vpn
-            ../../target/release/vpn_endpoint vpn.conf > /dev/null 2>&1 &
+            ../../target/release/vpn_endpoint vpn.conf tls_hosts.conf > /dev/null 2>&1 &
             echo "Start endpoint"
             sleep 3
 
