Pull request #129: instrumented tests for exclusions
Merge in ADGUARD-CORE-LIBS/vpn-libs from AG-20795 to master

Squashed commit of the following:

commit 28bb0f57458db32cd3b92e67e059d06168ba171c
Author: Max Grupper <m.grupper@adguard.com>
Date:   Wed Mar 29 20:08:44 2023 +0300

    fix volume

commit 4aa947316ce8c3e7a8622f77937e1db6f5962863
Author: Max Grupper <m.grupper@adguard.com>
Date:   Wed Mar 29 19:03:02 2023 +0300

    add volume

commit 4ab292bd7f9facfe6de83843131681c9b8c428fd
Author: Max Grupper <m.grupper@adguard.com>
Date:   Wed Mar 29 18:41:43 2023 +0300

    exit after 1st packet

commit b1de7674e31f09c7718ba5022d332c67f74803a9
Author: Max Grupper <m.grupper@adguard.com>
Date:   Wed Mar 29 18:26:21 2023 +0300

    redundant

commit 5e025130fc0d029f1f123bf45c08af581d1af911
Author: Max Grupper <m.grupper@adguard.com>
Date:   Wed Mar 29 18:12:39 2023 +0300

    clean up

commit 116e6507284a5b7651cecea517d271f58d36cd9e
Author: Max Grupper <m.grupper@adguard.com>
Date:   Wed Mar 29 17:34:55 2023 +0300

    fix

commit 6ff7c80326ebe51bb49f49161f33a6846a0ea097
Author: Max Grupper <m.grupper@adguard.com>
Date:   Wed Mar 29 16:47:32 2023 +0300

    add example.org to iptables

commit 63837ff5d93767b00c71187332299e48aadda2a4
Author: Max Grupper <m.grupper@adguard.com>
Date:   Wed Mar 29 16:35:54 2023 +0300

    test

commit 0b2565b02abc8046d0e8cdab8b3e01420a1743c2
Author: Max Grupper <m.grupper@adguard.com>
Date:   Wed Mar 29 16:15:42 2023 +0300

    test

commit ce96a1391fe9fd4dd0853e7fbd82a7e094a961aa
Author: Max Grupper <m.grupper@adguard.com>
Date:   Wed Mar 29 12:10:35 2023 +0300

    log to file

commit 6454c2c1e9e8cafda5a546fa8d5a5e51b3827a88
Author: Max Grupper <m.grupper@adguard.com>
Date:   Tue Mar 28 19:44:58 2023 +0300

    fix

commit d6020c217fac62e2f701c42c5ffc01b946447a41
Author: Max Grupper <m.grupper@adguard.com>
Date:   Tue Mar 28 19:07:55 2023 +0300

    revert test suite

commit 98c1a9bfa94fcd156b8fd604bcf8ad8f3bb42a73
Author: Max Grupper 

--- a/integration-tests/Dockerfile
+++ b/integration-tests/Dockerfile
@@ -4,6 +4,6 @@ FROM adguard/core-libs:1.16
 # Install the required utilities
 RUN apt update && \
     apt install -y build-essential cmake curl git gnupg lsb-release iperf3 iproute2 \
-    net-tools software-properties-common wget nano iputils-ping iptables
+    net-tools software-properties-common wget nano iputils-ping iptables tcpdump
 
 CMD bash
